--- a/frontend/src/app/pages/landing-page/landing-page.component.css
+++ b/frontend/src/app/pages/landing-page/landing-page.component.css
@@ -30,9 +30,6 @@
   border-radius: 5px;
   max-width: 335px;
   font-size: medium;
-  -webkit-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
-  -moz-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
-  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
 }
 
 .fila {
@@ -122,9 +119,6 @@
   background-color: white;
   padding: 25px 45px 15px 30px;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
-  -moz-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
-  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
 }
 
 .valor {
@@ -225,7 +219,11 @@ tbody tr:nth-child(1) {
   text-align: justify;
 }
 
-
+.shadow {
+  -webkit-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+  -moz-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+}
 
 input[type='range']::-webkit-slider-thumb {
   width: 15px;
