--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -14,23 +14,23 @@
               <img class="cabeza centrarImagen margin-auto" src="../../../assets/img/cabeza.svg">
               <div class="posicion position-absolute">
                 <div class="fila mb-3">
-                  <div class="PoppinsSemiBold bocadillo" style="background-color: #B7ABFF;">
+                  <div class="PoppinsSemiBold bocadillo shadow" style="background-color: #B7ABFF;">
                     No sé si esto quedará bien
                   </div>
-                  <div class="PoppinsSemiBold bocadillo" style="background-color: #ABE6FF;">
+                  <div class="PoppinsSemiBold bocadillo shadow" style="background-color: #ABE6FF;">
                     Esto es rojo o marrón?
                   </div>
                 </div>
                 <div class="fila mb-3 ">
-                  <div class="PoppinsSemiBold bocadillo" style="background-color: #FF9E9E;">
+                  <div class="PoppinsSemiBold bocadillo shadow" style="background-color: #FF9E9E;">
                     De qué color es esto? <span class="Emoji">🤔</span>
                   </div>
-                  <div class="PoppinsSemiBold bocadillo" style="background-color: #9FCCBF;">
+                  <div class="PoppinsSemiBold bocadillo shadow" style="background-color: #9FCCBF;">
                     No veo bien la paleta de colores <span class="Emoji">😔</span>
                   </div>
                 </div>
 
-                <div class="PoppinsSemiBold bocadillo" style="background-color: #ACC774; float: none; margin: 0 auto;">
+                <div class="PoppinsSemiBold bocadillo shadow" style="background-color: #ACC774; float: none; margin: 0 auto;">
                   El fondo del banner tiene que ser azul claro y las hojas verde oscuro!
                 </div>
               </div>
@@ -41,7 +41,7 @@
                   <h1 class="PoppinsBold mb-3">¡Acierta con los colores!</h1>
                   <h3 class="PoppinsMedium mb-3">Si tienes daltonismo y trabajas con colores. Esta aplicación web es para ti</h3>
                   <h5 class="PoppinsMedium mb-5">Deja atrás las confusiones y elige el color adecuado</h5>
-                    <button type="button" class="btn text-black" id="botonEmpezar">Empezar ahora</button>
+                    <button type="button" class="btn text-black" routerLink="/editor" id="botonEmpezar">Empezar ahora</button>
                 </div>
               </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="nums position-absolute" id="num2">2</div>
             <div class="nums position-absolute" id="num3">3</div>
             <img class="position-absolute" id="flechaPin" src="../../../assets/img/flechapin.svg">
-            <div class="col position-absolute" id="tabla">
+            <div class="col position-absolute shadow" id="tabla">
               <div class="row d-flex mb-2">
                 <p class="PoppinsSemiBold caracteristica">Color</p>
                 <p class="PoppinsMedium valor">Azul</p>
@@ -202,7 +202,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/img/email.png" class="d-block w-100" alt="..." style="display: none !important;">
+      <img src="../../../assets/img/bgSlider4.svg" class="d-block position-absolute" alt="fondoSlider" style="z-index: 0;">
       <div class="carousel-caption d-none d-md-block">
         <div class="row marginDiv">
           <div class="col d-flex align-items-center maxWidth position-relative">
