--- a/frontend/src/app/shared/nav-bar/nav-bar.component.css
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.css
@@ -1,7 +1,3 @@
-.container-fluid {
-  width: 100%;
-  padding: 15px 30px 15px;
-}
 
 img {
   width: 100px;
@@ -9,4 +5,16 @@ img {
 
 button {
   background-color: var(--blue-cobli);
+}
+
+.shadow {
+  z-index: 3;
+  position: relative;
+  -webkit-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+  -moz-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+}
+
+.navbar {
+  padding: 10px 20px;
 }
