--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,10 +1,40 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid shadow">
   <div class="row justify-content-between">
-    <div class="col-5">
-        <img src="../../../assets/img/logotipo.svg">
+    <div  class="col">
+        <img routerLink="/landing" (click)="logout()" src="../../../assets/img/logotipo.svg">
     </div>
+    <div  class="col">
+      <p routerLink="/gallery"> Inicio</p>
+  </div>
     <div class="col-5 d-flex align-self-center justify-content-end">
-      <button type="button" class="btn btn-primary">Iniciar sesión</button>
+      <button *ngIf="name === undefined" type="button" routerLinkActive="active" routerLink="/login" class="btn btn-primary">Iniciar sesión</button>
+      <p *ngIf="name !== undefined">{{name}}</p>
+
     </div>
   </div>
-</div>
+</div> -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+  <a (click)="logout()" class="navbar-brand">
+    <img  src="../../../assets/img/logotipo.svg" alt="Logotipo de Prado Silos" width="100"
+        class="d-inline-block align-text-top">
+  </a>
+  <ng-container>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li *ngIf="isLoggedIn">
+          <a class="nav-link" routerLinkActive="active" routerLink="/gallery">Inicio</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav justify-content-end">
+        <li *ngIf="name !== undefined" class="nav-item active">
+          <a class="nav-link">{{name}}</a>
+        </li>
+        <button *ngIf="name === undefined" type="button" routerLinkActive="active" routerLink="/login" class="btn btn-primary">Iniciar sesión</button>
+      </ul>
+    </div>
+  </ng-container>
+</nav>
+
