--- a/frontend/src/app/pages/gallery/gallery.component.css
+++ b/frontend/src/app/pages/gallery/gallery.component.css
@@ -18,11 +18,66 @@ p {
   width: max-content;
   padding: 10px;
   border-radius: 5px;
+  margin-left: 10px;
 }
 
 .shadow {
-  /* -webkit-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
-  -moz-box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
-  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%); */
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.35)!important;
+}
+
+.foto {
+  width: 230px;
+  height: 200px;
+}
+
+.tarjeta {
+  width: 300px;
+  background-color: blue;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.tarjeta img {
+  display: block;
+  margin: auto;
+}
+
+.info {
+  background-color: white;
+  padding: 10px 10px;
+}
+
+.texto {
+  max-width: 235px;
+  padding-right: 0;
+}
+
+h4 {
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+p {
+  padding: 0;
+  font-size: 14px;
+}
+
+.ocultar {
+  display: none !important;
+}
+
+.ver {
+  display: block !important;
+}
+
+#divImagen {
+  width: 20px;
+  height: 20px;
+  padding: 15px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
