--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -41,14 +41,13 @@
 }
 
 #conten > :first-child {
-
-  width: 47%;
-  flex-basis: 47%;
+  width: 50%;
+  flex-basis: 50%;
 }
 
 #conten > :last-child {
-  width: 52%;
-  flex-basis: 52%;
+  width: 50%;
+  flex-basis: 50%;
 }
 
 
@@ -69,7 +68,7 @@ select {
 .seccion {
   border-radius: 5px;
   border: 1px solid black;
-  padding: 12px;
+  padding: 15px;
 }
 
 .etiquetas {
@@ -93,6 +92,7 @@ input {
   border:solid 1px #ccc;
   border-radius: 5px;
   padding-left: 10px;
+  padding-right: 10px;
 }
 
 input:focus
@@ -103,8 +103,34 @@ input:focus
   outline: none;
 }
 
-canvas {
+#colorPickerContainer {
+  position: relative;
   width: 100%;
+  height: 30px;
+}
+
+#pickerTop {
+  position: absolute;
+  top: -15px;
+  left: -5px;
+}
+
+#pickerBottom {
+  position: absolute;
+  top: 15px;
+  left: -5px;
+}
+
+/* #colorPicker {
+  width: 5px;
+  height: 20px;
+  background-color: black;
+} */
+
+canvas {
+  position: absolute;
+  width: 100%;
+  height: 26px;
 }
 
 input[type='range']::-webkit-slider-thumb {
@@ -116,7 +142,7 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 .sliderFiltros {
-  width: 60%;
+  width: 55%;
 }
 
 
@@ -127,4 +153,20 @@ input[type='range']::-webkit-slider-thumb {
 
 .tamLabel {
   width: 115px;
+}
+
+#muestra {
+  width: 200px;
+  height: 100px;
+  background-color: red;
+  border-radius: 5px;
+  margin: auto;
+}
+
+#hexadecimal {
+  width: 200px;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-left: 12%;
 }
