--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
   </div>
 </div> -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-  <a (click)="logout()" class="navbar-brand">
+  <a routerLink="/landing" class="navbar-brand">
     <img  src="../../../assets/img/logotipo.svg" alt="Logotipo de Prado Silos" width="100"
         class="d-inline-block align-text-top">
   </a>
