--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -1,10 +1,4 @@
-#ventana {
-  background: #F8F8F8;
-  border: 2px dashed black;
-  border-radius: 5px;
-  width: 100%;
-  height: 720px;
-}
+
 
 .imgCentrada{
   align-self: center;
@@ -103,35 +97,6 @@ input:focus
   outline: none;
 }
 
-#colorPickerContainer {
-  position: relative;
-  width: 100%;
-  height: 30px;
-}
-
-#pickerTop {
-  position: absolute;
-  top: -15px;
-  left: -5px;
-}
-
-#pickerBottom {
-  position: absolute;
-  top: 15px;
-  left: -5px;
-}
-
-/* #colorPicker {
-  width: 5px;
-  height: 20px;
-  background-color: black;
-} */
-
-canvas {
-  position: absolute;
-  width: 100%;
-  height: 26px;
-}
 
 input[type='range']::-webkit-slider-thumb {
   width: 15px;
@@ -144,7 +109,6 @@ input[type='range']::-webkit-slider-thumb {
 .sliderFiltros {
   width: 55%;
 }
-
 
 .width-auto {
   width: auto;
@@ -170,3 +134,72 @@ input[type='range']::-webkit-slider-thumb {
   border-radius: 5px;
   margin-left: 12%;
 }
+
+.bgColors {
+  background: linear-gradient(to right, rgb(255,0,0) 0%, rgb(255,255,0) 17%, rgb(0,255,0) 33%, rgb(0,255,255) 50%, rgb(0,0,255) 66%, rgb(255,0,255) 83%, rgb(255,0,0) 100%);
+  width: auto;
+  height: 23px;
+}
+
+#colorPickerContainer {
+  position: relative;
+  width: 100%;
+  height: 30px;
+}
+
+#pickerTop {
+  position: absolute;
+  top: -15px;
+  left: -5px;
+  user-select: none;
+}
+
+#pickerBottom {
+  position: absolute;
+  top: 15px;
+  left: -5px;
+  user-select: none;
+}
+
+#ventana {
+  background: #F8F8F8;
+  border: 2px dashed black;
+  border-radius: 5px;
+  max-width: 100%;
+  width: 100%;
+  height: 720px;
+  position: relative;
+}
+
+canvas {
+  /* max-width: 100%;
+  max-height: 100%; */
+  /* width: 100%;
+  height: 100%; */
+  image-rendering: auto;
+}
+
+.imgCanvas {
+  object-fit: contain;
+}
+
+.nums {
+  border-radius: 20px;
+  width: 25px;
+  font-weight: 500;
+  height: 25px;
+  padding: 5px;
+  font-size: 14px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+#tagContainer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* background-color: blue; */
+  /* z-index: 1; */
+}
+
