--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -171,13 +171,14 @@ input[type='range']::-webkit-slider-thumb {
   position: relative;
 }
 
-canvas {
+#canvas {
   /* max-width: 100%;
   max-height: 100%; */
   /* width: 100%;
   height: 100%; */
   image-rendering: auto;
 }
+
 
 .imgCanvas {
   object-fit: contain;
