--- a/frontend/src/app/pages/editor/editor.component.html
+++ b/frontend/src/app/pages/editor/editor.component.html
@@ -27,12 +27,15 @@
           <div class="valor">
           </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row mb-2 align-items-center">
           <h6 class="me-2 PoppinsBold descripcion">
             Claridad
           </h6>
           <div class="valor">
           </div>
+        </div>
+        <div>
+          <canvas id="canvas2"></canvas>
         </div>
       </div>
       <div class="col-6">
