--- a/frontend/src/app/pages/editor/editor.component.html
+++ b/frontend/src/app/pages/editor/editor.component.html
@@ -24,14 +24,14 @@
           <h6 class="me-2 PoppinsBold descripcion">
             Color
           </h6>
-          <div class="valor">
+          <div class="valor PoppinsRegular">
           </div>
         </div>
-        <div class="row mb-2 align-items-center">
+        <div class="row mb-3 align-items-center">
           <h6 class="me-2 PoppinsBold descripcion">
             Claridad
           </h6>
-          <div class="valor">
+          <div class="valor PoppinsRegular">
           </div>
         </div>
         <div>
@@ -43,28 +43,28 @@
           <h6 class="me-2 PoppinsBold descripcion">
             Hex
           </h6>
-          <div class="valor">
+          <div #hex class="valor PoppinsRegular">
           </div>
         </div>
         <div class="row align-items-center mb-4">
           <h6 class="me-2 PoppinsBold descripcion">
             RGB
           </h6>
-          <div class="valor">
+          <div #rgb class="valor PoppinsRegular">
           </div>
         </div>
         <div class="row align-items-center mb-4">
           <h6 class="me-2 PoppinsBold descripcion">
             HSL
           </h6>
-          <div class="valor">
+          <div #hsl class="valor PoppinsRegular">
           </div>
         </div>
         <div class="row align-items-center mb-4">
           <h6 class="me-2 PoppinsBold descripcion">
             HSV
           </h6>
-          <div class="valor">
+          <div #hsv class="valor PoppinsRegular">
           </div>
         </div>
       </div>
