navBar items fixed

--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -236,7 +236,7 @@
                 <h1 class="PoppinsBold mb-3" style="color: red">¡Acierta con los colores!</h1>
                 <h3 class="PoppinsMedium mb-3">Si tienes daltonismo y trabajas con colores. Esta aplicación web es para ti</h3>
                 <h5 class="PoppinsMedium mb-5">Deja atrás las confusiones y elige el color adecuado</h5>
-                  <button type="button" class="btn btn-primary botonEmpezar text-black">Empezar ahora</button>
+                  <button type="button" (click)="goEditor()" class="btn btn-primary botonEmpezar text-black">Empezar ahora</button>
               </div>
             </div>
           </div>
