--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -69,11 +69,11 @@ select {
 }
 
 .etiquetas {
-  height: 440px;
+  height: 420px;
 }
 
 .hsl {
-  height: 400px;
+  height: max-content
 }
 
 #spectrum {
@@ -122,6 +122,8 @@ input[type='range']::-webkit-slider-thumb {
   width: 115px;
 }
 
+/* COLOR PICKER */
+
 #muestra {
   width: 200px;
   height: 100px;
@@ -164,6 +166,8 @@ input[type='range']::-webkit-slider-thumb {
   user-select: none;
 }
 
+/* CANVAS */
+
 #ventana {
   background: #F8F8F8;
   border: 2px dashed black;
@@ -202,7 +206,74 @@ input[type='range']::-webkit-slider-thumb {
   width: 100%;
   height: 100%;
   position: absolute;
-  /* background-color: blue; */
-  /* z-index: 1; */
 }
 
+
+/* INPUT FILE */
+
+#upload {
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+#inputFile {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#inputFile  img {
+  cursor: pointer;
+}
+
+.ocultar {
+  visibility: hidden;
+}
+
+.ver {
+  visibility: visible;
+}
+
+table {
+  display: block;
+  max-height: 350px;
+  width: 340px;
+  overflow-y: auto;
+  border-collapse: collapse;
+  box-sizing: border-box;
+}
+/*
+thead {
+  width: 100%;
+  display: block;
+} */
+
+table::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+
+table::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+table::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 1em;
+}
+
+#description {
+  width: 120px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+#projectTitle {
+  /* margin-left: 500px; */
+  width: 550px;
+}
