--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -23,9 +23,9 @@
 }
 
 #contenedor > :first-child {
-
   width: 55%;
   flex-basis: 55%;
+  height: max-content;
 }
 
 #contenedor > :last-child {
@@ -69,7 +69,7 @@ select {
 }
 
 .etiquetas {
-  height: 420px;
+  height: 360px;
 }
 
 .hsl {
@@ -125,8 +125,8 @@ input[type='range']::-webkit-slider-thumb {
 /* COLOR PICKER */
 
 #muestra {
-  width: 200px;
-  height: 100px;
+  width: 180px;
+  height: 60px;
   background-color: red;
   border-radius: 5px;
   margin: auto;
@@ -174,7 +174,7 @@ input[type='range']::-webkit-slider-thumb {
   border-radius: 5px;
   max-width: 100%;
   width: 100%;
-  height: 720px;
+  height: 760px;
   position: relative;
 }
 
@@ -238,9 +238,9 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 table {
-  display: block;
-  max-height: 350px;
-  width: 340px;
+  display: inline-grid;
+  max-height: 280px;
+  width: 350px;
   overflow-y: auto;
   border-collapse: collapse;
   box-sizing: border-box;
@@ -266,14 +266,17 @@ table::-webkit-scrollbar-thumb {
 }
 
 #description {
-  width: 120px;
+  width: 170px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-
 #projectTitle {
   /* margin-left: 500px; */
   width: 550px;
+}
+
+#colorAvg{
+  border: 1px solid black;
 }
