--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -1,1 +1,46 @@
-<p>profile works!</p>
+<div id="contenedor">
+  <h5 class="text-center PoppinsBold">Información de la cuenta</h5>
+  <form [formGroup]="userForm" (submit)="saveChanges()">
+    <div class="position-relative mb-3">
+      <h6 class="PoppinsBold position-absolute titulo">Cuenta</h6>
+      <div class="borde">
+        <div class="mb-3">
+          <label for="email" class="form-label PoppinsRegular">Email</label>
+          <input type="text" formControlName="email" placeholder="Email" class="form-control tamInput PoppinsRegular" required>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label PoppinsRegular">Contraseña</label>
+          <input type="text" readonly [value]="'**********'" class="form-control tamInput PoppinsRegular" required>
+          <p id="pass">Cambiar contraseña</p>
+        </div>
+      </div>
+    </div>
+    <div class="position-relative mb-3">
+      <h6 class="PoppinsBold position-absolute titulo">Personal</h6>
+      <div class="borde">
+        <div class="mb-3">
+          <label for="name" class="form-label PoppinsRegular">Nombre de usuario</label>
+          <input type="text" formControlName="name" placeholder="Nombre de usuario" class="form-control tamInput PoppinsRegular" required>
+        </div>
+        <div class="mb-3">
+          <label for="colorBlindness" class="form-label PoppinsRegular">Tipo de daltonismo</label>
+          <select #colorBlindness class="form-control tamInput" required>
+            <option value="-">-</option>
+            <option value="">Deuteranopía (verde)</option>
+            <option value="">Deuternomalía (verde)</option>
+            <option value="">Protanopía (rojo)</option>
+            <option value="">Protanomalía (rojo)</option>
+            <option value="">Tritanopía (azul)</option>
+            <option value="">Tritanomalía (azul)</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="occupation" class="form-label PoppinsRegular">Ocupación</label>
+          <input type="text" formControlName="occupation" placeholder="Ocupación" class="form-control tamInput PoppinsRegular" required>
+        </div>
+      </div>
+    </div>
+    <p>Darse de baja</p>
+  </form>
+</div>
+
